# practice

./: LICENSE  Makefile  README.md  go.mod  test.py
C++/cppbuild/: Makefile  app
C++/token_appearance/: CMakeCache.txt  CMakeLists.txt  Makefile  TokenCounterImpl.cpp  TokenCounterImpl.h  cmake_install.cmake  main  main.cpp  node.cpp  node.h  token_appearance
C++/trie/: main  main.cpp
C/ElevatorSystem/: main.c
C/ThreadPool/: main  main.c
DSA/: README.md
Go/: README.md
Go/auth-system/: main.go
Go/bit-operation/: main.go
Go/future-pattern/: main.go
Go/gorm-gen/: main.go
Go/guarded-suspension-pattern/: main.go
Go/http_response_handling/: http_response_handling.go
Go/k8s_informer/: main.go
Go/longest-common-subsequence/: LCSmn+1.go
Go/map-concurrent-test/: go.mod  main.go
Go/network-scanner/: README.md  main.go
Go/panic-recover/: main.go
Go/priority_queue/: go.mod  main.go
Go/queue/: queue.go
Go/rabbitmq/: go.mod
Go/raft/: README.md
Go/raid/: README.md  disk.go  domain.go  go.mod  go.sum  main.go  raid0.go  raid1.go  raid10.go  raid5.go  raid6.go
Go/regex/: storemgr.js  (+1 more)
Python/: BFS.py  DFS.py  composition.py  sequence-rename.py
SQL/: example.db  go.mod  go.sum
Svelte/: README.md
cmake-example/: CMakeLists.txt  main.cpp
connectrpc/: buf.gen.yaml
count_capital_and_interest/: main.py  test2.py
cryptography/: block.py  caesar.py  monoalphabetic.py  polyalphabetic.py
data-structure-and-algorithm/: Mathematics Fundamentals:.md  go.work
grpc/: buf.gen.yaml  main.proto
install-zsh-CentOs7/: main.sh
tws/: main.py
(+182 files in other folders)
